# newMemberProject

srvcli/: CMakeLists.txt  package.xml
srvcli/src/: publisher_member_function.cpp  server.cpp
subscriber/: CMakeLists.txt  package.xml
subscriber/launch/: listener_launch.yaml
subscriber/src/: subscriber_member_function.cpp
testers/: CMakeLists.txt  package.xml
